syntax = "proto3";

package post;
option go_package = "post_api/internal/common/genproto/post/api/protobuf;postv1";



service PostService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc ReadPost(ReadPostRequest) returns (ReadPostResponse);
    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
    string author = 3;
    string publication_date = 4;
    string tags = 5;
}

message CreatePostResponse {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    string publication_date = 5;
    string tags = 6;
    string error_message = 7;
}

message ReadPostRequest {
    string post_id = 1;
}

message ReadPostResponse {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    string publication_date = 5;
    repeated string tags = 6;
    string error_message = 7;
}

message UpdatePostRequest {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    string tags = 5;
}

message UpdatePostResponse {
  string message = 1;
  string error_message = 2;
}

message DeletePostRequest {
    string post_id = 1;
}

message DeletePostResponse {
    bool success = 1;
    string error_message = 2;
}
